--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,7 @@ table {
 }
 
 button {
+	transition: transform .5s;
 	cursor: pointer;
 	outline: none;
 }
@@ -81,4 +82,8 @@ a {
 	width: 10rem;
 	margin: 0 2rem;
 	box-shadow: 5px 5px 10px 1px #00000066;
+}
+
+button:hover {
+	transform: scale(1.05);
 }
