--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,21 @@
 
 
+@font-face {
+    font-family: 'frank';
+    src: url('/tipografia/franklin-gothic-book.ttf');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'frank';
+    src: url('/tipografia/franklin-gothic-heavy.ttf');
+    font-weight: 600;
+    font-style: normal;
+}
+
 :root {
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-family: 'frank', sans-serif;
 	--dark-green: #068437;
 	--intermediate-gren: #2D9B36;
 	--light-green: #4AAC35;
