--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,7 @@
 	--smoth-green: #A5D3B1;
 	--blue: #0E566C;
 	--blue-transparent: #0e566cc1;
+	--light-blue: #269ED9;
 	--blue-opacity: #126A59;
 	--orange: #F1871D;
 	--light-orange: #F4A06C;
